<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.booking.BookingFragment">


    <View
        android:id="@+id/divider11"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView9"
        style="@style/header_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Đặt hàng"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView14" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="@dimen/image_size"
        android:layout_height="@dimen/image_size"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ScrollView
        android:id="@+id/scrollCart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/cart"
        android:paddingStart="@dimen/layout_start"
        android:paddingEnd="@dimen/layout_end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider11">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvQuantityBooking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvBooking"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:weightSum="2"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvSumBooking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="35.000 đ"
                    android:layout_weight="1"
                    android:textSize="30sp" />


            </LinearLayout>

            <RadioGroup
                android:id="@+id/radioGroupBooking"
                android:layout_width="match_parent"

                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textView21"
                    android:layout_marginTop="@dimen/_16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Thông tin giao nhận" />

                <RadioButton
                    android:id="@+id/radioButtonShop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/re_shop" />

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="30dp"
                    android:text="@string/address_shop" />

                <RadioButton
                    android:id="@+id/radioButtonHome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/re_home" />

                <TextView
                    android:id="@+id/tvAddressBooking"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="30dp"
                    android:text="@string/space"
                    app:drawableEndCompat="@drawable/ic_baseline_edit_location_alt_24" />
            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/date_order">

                <EditText
                    android:id="@+id/txtDaBooking"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:editable="false"
                    android:drawableEnd="@drawable/ic_baseline_edit_calendar_24" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/note">

                <EditText
                    android:id="@+id/txtNoteBooking"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnOrderBooking"
                style="@style/button"
                android:textSize="22sp"
                android:layout_marginTop="@dimen/_16dp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/order2" />
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="invisible" />
</androidx.constraintlayout.widget.ConstraintLayout>