<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.account.AccountFragment">


    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_layout"
        style="@style/button"
        android:layout_marginTop="@dimen/_32dp"
        android:layout_marginEnd="@dimen/margin_layout"
        android:text="@string/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/tvNameAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview"
        android:textSize="@dimen/big_text"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toEndOf="@+id/imageButton"
        app:layout_constraintTop_toTopOf="@+id/imageButton" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="@dimen/_64dp"
        android:layout_height="@dimen/_64dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/logo"
        android:src="@android:drawable/btn_star_big_on"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginStart="@dimen/margin_layout"
        android:layout_marginTop="@dimen/_32dp"
        android:gravity="center_vertical"
        android:layout_marginEnd="@dimen/margin_layout"
        android:drawablePadding="@dimen/_8dp"
        android:text="@string/wallet"
        android:textColor="#827717"
        android:textSize="@dimen/text_medium"
        app:drawableLeftCompat="@drawable/ic_baseline_account_balance_wallet_24"
        app:drawableRightCompat="@drawable/ic_baseline_arrow_forward_ios_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:layout_height="32dp"
        android:layout_marginStart="@dimen/margin_layout"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/margin_layout"
        android:drawablePadding="@dimen/_8dp"
        android:text="@string/address"
        android:textColor="#827717"
        android:textSize="@dimen/text_medium"
        app:drawableLeftCompat="@drawable/ic_baseline_location_on_24"
        app:drawableRightCompat="@drawable/ic_baseline_arrow_forward_ios_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginStart="@dimen/margin_layout"
        android:layout_marginTop="@dimen/_24dp"
        android:layout_marginEnd="@dimen/margin_layout"
        android:drawablePadding="@dimen/_8dp"
        android:gravity="center_vertical"
        android:text="@string/policy"
        android:textColor="#827717"
        android:textSize="@dimen/text_medium"
        app:drawableLeftCompat="@drawable/ic_baseline_text_snippet_24"
        app:drawableRightCompat="@drawable/ic_baseline_arrow_forward_ios_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginStart="@dimen/margin_layout"
        android:layout_marginTop="@dimen/_8dp"
        android:layout_marginEnd="@dimen/margin_layout"
        android:drawablePadding="@dimen/_8dp"
        android:gravity="center_vertical"
        android:text="@string/setting"
        android:textColor="#827717"
        android:textSize="@dimen/text_medium"
        app:drawableLeftCompat="@drawable/ic_baseline_settings_24"
        app:drawableRightCompat="@drawable/ic_baseline_arrow_forward_ios_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="@dimen/image_size"
        android:layout_height="@dimen/image_size"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/account"
        style="@style/header_page"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <View
        android:id="@+id/divider2"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />
</androidx.constraintlayout.widget.ConstraintLayout>